<resources>
    <string name="app_name" translatable="false">LoadApp</string>
    <string name="main_click_me">click me</string>
    <string name="main_loan">Loan</string>
    <string name="main_me">Me</string>
    <string name="main_haikyfun">Haikyfun</string>
    <string name="spalish_welcome">Welcome to Haikyfun</string>
    <string name="spalish_sign_in">Sign in</string>
    <string name="spalish_sign_up">Sign up</string>

    <string name="default_notification_channel_id" >Haikyfun</string>

    <string name="spalish_Input_your_phone_number">Input your phone number</string>
    <string name="spalish_Next">Next</string>
    <string name="spalish_Please_enter">Please input your phone num:</string>

    <string name="Input_your_OTP">Input your OTP</string>
    <string name="The_verification_OTP_has_been_sent_to_99909909_Via_SMS">The verification OTP has been sent to 99909909 via SMS</string>

    <string name="The_verification_code_has_been_sent_to_your_phone_number">The verification code has been sent to your phone number</string>
    <string name="Resent_now">Resend now</string>
    <string name="Resent_after">Resend After</string>

    <string name="signup_input_otp">Input your OTP</string>
    <string name="signup_input_desc">The verification code has been send to %s via sms</string>
    <string name="signup_set_pwd_title">create a 4-digit password </string>
    <string name="signup_set_pwd_1">Please input 4-digit password : </string>
    <string name="signup_set_pwd_2">Repeat 4-digit Password :</string>
    <string name="signup_set_pwd_commit">commit</string>

    <string name="signin_set_account">Please input account: </string>
    <string name="signin_set_pwd">Please input password :</string>
    <string name="signin_login">login</string>

    <string name="loan_person_profile_title">Basic information</string>
    <string name="loan_person_profile_title2">Contact</string>
    <string name="loan_person_profile_title3">CNIC</string>

    <string name="loan_person_profile_email">E-mail </string>
    <string name="loan_person_profile_monthly_salary">Monthly salary </string>
    <string name="loan_person_profile_work_year">Current working years </string>
    <string name="loan_person_profile_province">Current Province </string>
    <string name="loan_person_profile_address">Current Address </string>

    <string name="loan_person_profile_emergency_contact1">Emergency Contact1</string>
    <string name="loan_person_profile_emergency_contact2">Emergency Contact2</string>
    <string name="loan_person_profile_relationship">Relationship</string>
    <string name="loan_person_profile_mobile">Mobile Phone Number</string>
    <string name="loan_person_profile_name">Name</string>

    <string name="loan_person_profile_upload_cnic">Upload CNIC</string>
    <string name="loan_person_profile_upload_cnic_desc">Please take a photo of the original card</string>
    <string name="loan_person_profile_cnic_front">Front</string>
    <string name="loan_person_profile_cnic_back">Back</string>
    <string name="loan_person_profile_father_name">Father,s Name</string>
    <string name="loan_person_profile_gender">Gender </string>
    <string name="loan_person_profile_enter_cnic_info">Enter CNIC information </string>
    <string name="loan_person_profile_enter_cnic_info_desc">Computerized National Idently Card</string>
    <string name="loan_person_profile_cnic_num">CNIC Number</string>
    <string name="loan_person_profile_birth">Date of Birth</string>
    <string name="loan_person_profile_next">Next</string>
    <string name="loan_person_profile3_font">Front</string>
    <string name="loan_person_profile3_back">Back</string>
    <string name="loan_person_profile3_click">Click here</string>

    <string name="load_person_profile_male">Male</string>
    <string name="load_person_profile_family">Female</string>

    <string name="load_person_profile_bank_name_title">Your Bank Account Details</string>
    <string name="load_person_profile_wallet_name_title">Your Wallet Account Details</string>
    <string name="load_person_profile_bank_veriy_name">Bank Verification Number (BVN)</string>
    <string name="load_person_profile_bank_bank_name">Bank Name</string>
    <string name="load_person_profile_type">Type</string>
    <string name="load_person_profile_bank_account_num">Account Number</string>

    <string name="load_person_profile_wallet">Mobile Wallet Account</string>
    <string name="load_person_profile_wallet_confirm">Confirm Mobile Wallet Account</string>
    <string name="load_person_profile_type_wallet">Wallet</string>
    <string name="load_person_profile_type_bank">Bank</string>

    <string name="request_permission_title">Welcome to Haikyfin</string>
    <string name="request_permission_desc">To assess your profile and create tailored loan products, we need to get your permissions for accessing information on your Phone, SMS, Contacts, Location, SD card, and Calendar. All the information will be uploaded to our server (url https://srv.haikyfin.com) as the input of our credit model. </string>
    <string name="request_permission_location_title">Location</string>
    <string name="request_permission_location_desc">We require access to your location in accordance with our anti-money laundering policies. As a responsible corporate entity, we take every measure to ensure that the use of our services is for legitimate and legal purposes only. In order to ensure the legality of the use of our services, we require access to your location to verify that you are accessing the services from within the borders of Pakistan and to ensure that the repayment of any loaned amounts emanate from within Pakistan and the funds are legitimate in nature. </string>
    <string name="request_permission_sms_title">SMS</string>
    <string name="request_permission_sms_desc">We require access to your SMS logs to verify your identity and create credit scoring models to determine what Loans can be offered to you in line with our responsible lending practices. We also use this data for purposes of collections and credit reporting as required by law. We will only access your SMS logs at the time of you applying for a loan and will not access your SMS logs anytime thereafter.All the information will be uploaded to our server (url https://srv.haikyfin.com) as the input of our credit model</string>
    <string name="request_permission_camera_title">Camera</string>
    <string name="request_permission_camera_desc">In order to effectively prevent fraudulent users, we need your kyc authentication when applying for loans. Please read the authorization carefully before using Haikyfin.</string>
    <string name="request_permission_contacts_title">Contacts</string>
    <string name="request_permission_contacts_desc">We require access to your contacts list in order to verify the emergency contact information provided by you. You acknowledge and agree that we may, from time to time, check your contact list to verify that the emergency contact information provided is current and up to date. We will access nor ustlise any other contact information apart from your designated emergency contact.All the information will be uploaded to our server (url https://srv.haikyfin.com) as the input of our credit model. </string>
    <string name="request_permission_calendar_title">Calendar</string>
    <string name="request_permission_calendar_desc">You agree that we must be granted access to your smartphone\'s calendar in order to input reminders pertaining to repayment dates of your loan. We will not extract nor view any information in your calendar and limit our actions to setting reminders Gallery We need to obtain your storage permission to ensure the normal operation of the program. </string>
    <string name="request_permission_cancel">CANCEL</string>
    <string name="request_permission_agree">AGREE</string>

    <string name="me_information">My information</string>
    <string name="me_bank_card">My bank card</string>
    <string name="me_message">Message</string>
    <string name="me_help">Help</string>
    <string name="me_logout">logout</string>
    <string name="home_loan_status_processing">We are estimating your loan,Please pay attention to the review results on the App. </string>
    <string name="home_loan_status_refuse">Sorry, You did not pass the review, please try again after 7 days</string>
    <string name="home_loan_status_need_comfire">The system has detected that your bank card information is incorrectly filled, please upload it again.</string>
    <string name="home_loan_success">The system has detected that your bank card information is incorrectly filled, please upload it again.</string>

    <string name="home_loan_success_desc1">Provide 24th repayment</string>
    <string name="home_loan_success_desc2">Online or offline payment</string>

    <string name="home_loan_product_trial_title">Loan Confirmation</string>

    <string name="sign_up_cancel">CANCEL</string>
    <string name="sign_up_agree">AGREE</string>
    <string name="load_confirmation_term_1">I agree to the</string>
    <string name="load_confirmation_term_2">terms &amp; condition</string>

    <string name="load_apply_amount_title">Loan Amount</string>
    <string name="load_apply_date_title">Repayment Term</string>
    <string name="load_apply_index">%d nd installment</string>
    <string name="load_apply_date_desc_total">Total payment</string>
    <string name="load_apply_date_desc1">Loan Amount</string>
    <string name="load_apply_date_desc2">Service fee</string>
    <string name="load_apply_date_desc3">Interest</string>
    <string name="load_apply_date_desc4">Due date</string>

</resources>
