<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/request_permission_bg"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/request_permission_title"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/request_permission_desc"
                android:textSize="16sp" />

        </ScrollView>

        <LinearLayout
            style="@style/request_permission_container"
            android:layout_marginTop="20dp">

            <ImageView
                style="@style/request_permission_iv"
                android:src="@drawable/ic_permission_location" />

            <LinearLayout style="@style/request_permission_tv_container">

                <TextView
                    style="@style/request_permission_tv_top"
                    android:text="@string/request_permission_location_title" />

                <ScrollView style="@style/request_permission_sc_container">

                    <TextView
                        style="@style/request_permission_tv_bottom"
                        android:text="@string/request_permission_location_desc" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/request_permission_container">

            <ImageView
                style="@style/request_permission_iv"
                android:src="@drawable/ic_permission_message" />

            <LinearLayout style="@style/request_permission_tv_container">

                <TextView
                    style="@style/request_permission_tv_top"
                    android:text="@string/request_permission_sms_title" />

                <ScrollView style="@style/request_permission_sc_container">

                    <TextView
                        style="@style/request_permission_tv_bottom"
                        android:text="@string/request_permission_sms_desc" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/request_permission_container">

            <ImageView
                style="@style/request_permission_iv"
                android:src="@drawable/ic_permission_camera" />

            <LinearLayout style="@style/request_permission_tv_container">

                <TextView
                    style="@style/request_permission_tv_top"
                    android:text="@string/request_permission_camera_title" />

                <ScrollView style="@style/request_permission_sc_container">

                    <TextView
                        style="@style/request_permission_tv_bottom"
                        android:text="@string/request_permission_camera_desc" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/request_permission_container">

            <ImageView
                style="@style/request_permission_iv"
                android:src="@drawable/ic_permission_contact" />

            <LinearLayout style="@style/request_permission_tv_container">

                <TextView
                    style="@style/request_permission_tv_top"
                    android:text="@string/request_permission_contacts_title" />

                <ScrollView style="@style/request_permission_sc_container">

                    <TextView
                        style="@style/request_permission_tv_bottom"
                        android:text="@string/request_permission_contacts_desc" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/request_permission_container">

            <ImageView
                style="@style/request_permission_iv"
                android:src="@drawable/ic_permission_calendar" />

            <LinearLayout style="@style/request_permission_tv_container">

                <TextView
                    style="@style/request_permission_tv_top"
                    android:text="@string/request_permission_calendar_title" />

                <ScrollView style="@style/request_permission_sc_container">

                    <TextView
                        style="@style/request_permission_tv_bottom"
                        android:text="@string/request_permission_calendar_desc" />

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_request_permission_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/request_permission_cancel"
            android:gravity="center"
            android:text="@string/request_permission_cancel"
            android:textColor="#0EC6A2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_request_permission_agree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/request_permission_comfire"
            android:gravity="center"
            android:text="@string/request_permission_agree"
            android:textColor="#0EC6A2"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>