<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_welcome_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="63dp"
        android:layout_marginTop="14dp"
        android:text="@string/Input_your_OTP"

        android:textColor="#333333"
        android:textSize="18sp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="30dp"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/The_verification_code_has_been_sent_to_your_phone_number"

        android:textColor="#666666"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:text="@string/Resent_now"

        android:textColor="#0EC6A2"
        android:textSize="14sp"
        />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:src="@drawable/ic_back" />




</RelativeLayout>