<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#F8F8F8"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_me"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar" />

        <TextView
            android:id="@+id/tv_me_avatar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:text="111"
            android:textColor="#333333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_me_infomation"
            style="@style/me_container">

            <ImageView
                style="@style/me_lef_icon"
                android:src="@drawable/ic_me_infomation" />

            <TextView
                style="@style/me_middle_text"
                android:text="@string/me_information" />

            <ImageView
                style="@style/me_right_arrow"
                android:src="@drawable/ic_me_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me_bank_card"
            style="@style/me_container">

            <ImageView
                style="@style/me_lef_icon"
                android:src="@drawable/ic_me_bank_card" />

            <TextView
                style="@style/me_middle_text"
                android:text="@string/me_bank_card" />

            <ImageView
                style="@style/me_right_arrow"
                android:src="@drawable/ic_me_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me_message"
            style="@style/me_container">

            <ImageView
                style="@style/me_lef_icon"
                android:src="@drawable/ic_me_message" />

            <TextView
                style="@style/me_middle_text"
                android:text="@string/me_message" />

            <ImageView
                style="@style/me_right_arrow"
                android:src="@drawable/ic_me_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me_help"
            style="@style/me_container">

            <ImageView
                style="@style/me_lef_icon"
                android:src="@drawable/ic_me_help" />

            <TextView
                style="@style/me_middle_text"
                android:text="@string/me_help" />

            <ImageView
                style="@style/me_right_arrow"
                android:src="@drawable/ic_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_me_logout"
        android:layout_width="match_parent"
        android:background="@drawable/ic_bg_white"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/me_logout"
            android:textColor="#999999"
            android:textSize="14sp" />
    </FrameLayout>

</LinearLayout>