<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="I choose this way to receive money"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.loadapp.load.ui.profile.widget.SelectContainer
            android:id="@+id/select_container_type"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:select_view_hint="@string/load_person_profile_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@android:color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_bank_info_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.loadapp.load.ui.profile.widget.EditTextContainer
                    android:id="@+id/edittext_container_bank_verify_num"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:select_view_hint="@string/load_person_profile_bank_veriy_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@android:color/black" />

                <com.loadapp.load.ui.profile.widget.SelectContainer
                    android:id="@+id/select_container_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    app:select_view_hint="@string/load_person_profile_bank_bank_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@android:color/black" />

                <com.loadapp.load.ui.profile.widget.EditTextContainer
                    android:id="@+id/edittext_container_bank_account_num"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    app:select_view_hint="@string/load_person_profile_bank_account_num" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bank_info_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.loadapp.load.ui.profile.widget.EditTextContainer
                    android:id="@+id/edittext_container_bank_wallet_account"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    app:select_view_hint="@string/load_person_profile_wallet" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@android:color/black" />

                <com.loadapp.load.ui.profile.widget.EditTextContainer
                    android:id="@+id/edittext_container_bank_wallet_account_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="10dp"
                    app:select_view_hint="@string/load_person_profile_wallet_confirm" />

            </LinearLayout>

        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@android:color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_bank_info_commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/source2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loan_person_profile_next"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </FrameLayout>

</RelativeLayout>
