<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/shape_round_green" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/shape_round_white" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/shape_round_white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <com.loadapp.load.ui.profile.widget.EditTextContainer
                android:id="@+id/edit_view_person_profile_email"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/loan_person_profile_email" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@android:color/black" />

            <com.loadapp.load.ui.profile.widget.SelectContainer
                android:id="@+id/select_view_person_profile_monthly_salary"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/loan_person_profile_monthly_salary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@android:color/black" />

            <com.loadapp.load.ui.profile.widget.SelectContainer
                android:id="@+id/select_view_person_profile_work_year"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/loan_person_profile_work_year" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@android:color/black" />

            <com.loadapp.load.ui.profile.widget.SelectContainer
                android:id="@+id/select_view_person_profile_province"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/loan_person_profile_province" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@android:color/black" />

            <com.loadapp.load.ui.profile.widget.EditTextContainer
                android:id="@+id/edittext_view_person_profile_address"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/loan_person_profile_address" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:id="@+id/fl_person_profile_commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/source2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loan_person_profile_next"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </FrameLayout>
</LinearLayout>